Fixed overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,5 +12,5 @@ body {
 
 code {
     font-family: 'Source Code Pro', monospace;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
 }
